feature: user/update-pin
